--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
   {% include head.html %}
+  {% include comments.html %}
 
   <body>
 
     <div class="container content">
       <header class="masthead">
        <h3 class="masthead-title">
-<a href="/" title="Home">{{ site.title }}</a>
-
-{% for page in site.pages_list %}
+        <a href="/" title="Home">{{ site.title }}</a>
+        {% for page in site.pages_list %}
   &nbsp;&nbsp;&nbsp;
   <small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
 {% endfor %}
